--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
 
   <p>
 
-    Daily activities/ organized your day, make it count
+    Daily planner/ organized your day, make it count
 
     </p>
 
   <button>
 
-   <a href="https://thedzigner.github.io/my_daily_activities/">
+   <a href="https://daily-plans.netlify.app/">
 
      visit
 
